module.jai


mg_ws_upgrade_CFormat :: (unknown0: *mg_connection, unknown1: *mg_http_message, fmt: *u8, __args: ..Any) -> void #foreign mongoose "mg_ws_upgrade";
mg_ws_upgrade :: (unknown0: *mg_connection, unknown1: *mg_http_message, fmt: string, __args: ..Any) {
    push_allocator(temp);
    formatted_text_builder: String_Builder;
    print_to_builder(*formatted_text_builder, fmt, ..__args);
    append(*formatted_text_builder, "\0");
    formatted_text := builder_to_string(*formatted_text_builder);
    mg_ws_upgrade_CFormat(unknown0, unknown1, "%s", formatted_text.data);
} @PrintLike

mg_ws_send :: (unknown0: *mg_connection, buf: *u8, len: size_t, op: s32) -> size_t #foreign mongoose;

mg_ws_wrap :: (unknown0: *mg_connection, len: size_t, op: s32) -> size_t #foreign mongoose;

mg_sntp_connect :: (mgr: *mg_mgr, url: *u8, fn: mg_event_handler_t, fn_data: *void) -> *mg_connection #foreign mongoose;

mg_sntp_send :: (c: *mg_connection, utc: u32) -> void #foreign mongoose;

mg_sntp_parse :: (buf: *u8, len: size_t) -> s64 #foreign mongoose;

mg_mqtt_opts :: struct {
    user:         mg_str; // Username, can be empty
    pass:         mg_str; // Password, can be empty
    client_id:    mg_str; // Client ID
    will_topic:   mg_str; // Will topic
    will_message: mg_str; // Will message
    will_qos:     u8; // Will message quality of service
    will_retain:  bool; // Retain last will
    clean:        bool; // Use clean session, 0 or 1
    keepalive:    u16; // Keep-alive timer in seconds
}

mg_mqtt_message :: struct {
    topic: mg_str; // Parsed topic
    data:  mg_str; // Parsed message
    dgram: mg_str; // Whole MQTT datagram, including headers
    id:    u16; // Set for PUBACK, PUBREC, PUBREL, PUBCOMP, SUBACK, PUBLISH
    cmd:   u8; // MQTT command, one of MQTT_CMD_*
    qos:   u8; // Quality of service
    ack:   u8; // Connack return code. 0 - success
}

mg_mqtt_connect :: (unknown0: *mg_mgr, url: *u8, opts: *mg_mqtt_opts, fn: mg_event_handler_t, fn_data: *void) -> *mg_connection #foreign mongoose;

mg_mqtt_listen :: (mgr: *mg_mgr, url: *u8, fn: mg_event_handler_t, fn_data: *void) -> *mg_connection #foreign mongoose;

mg_mqtt_login :: (c: *mg_connection, opts: *mg_mqtt_opts) -> void #foreign mongoose;

mg_mqtt_pub :: (c: *mg_connection, topic: mg_str, data: mg_str, qos: s32, retain: bool) -> void #foreign mongoose;

mg_mqtt_sub :: (unknown0: *mg_connection, topic: mg_str, qos: s32) -> void #foreign mongoose;

mg_mqtt_parse :: (buf: *u8, len: size_t, m: *mg_mqtt_message) -> s32 #foreign mongoose;

mg_mqtt_send_header :: (unknown0: *mg_connection, cmd: u8, flags: u8, len: u32) -> void #foreign mongoose;

mg_mqtt_next_sub :: (msg: *mg_mqtt_message, topic: *mg_str, qos: *u8, pos: size_t) -> size_t #foreign mongoose;

mg_mqtt_next_unsub :: (msg: *mg_mqtt_message, topic: *mg_str, pos: size_t) -> size_t #foreign mongoose;

mg_mqtt_ping :: (unknown0: *mg_connection) -> void #foreign mongoose;

mg_mqtt_pong :: (unknown0: *mg_connection) -> void #foreign mongoose;

mg_mqtt_disconnect :: (unknown0: *mg_connection) -> void #foreign mongoose;

// Mongoose sends DNS queries that contain only one question:
// either A (IPv4) or AAAA (IPv6) address lookup.
// Therefore, we expect zero or one answer.
// If `resolved` is true, then `addr` contains resolved IPv4 or IPV6 address.
mg_dns_message :: struct {
    txnid:    u16; // Transaction ID
    resolved: bool; // Resolve successful, addr is set
    addr:     mg_addr; // Resolved address
    name:     [256] u8; // Host name
}

mg_dns_header :: struct {
    txnid:             u16; // Transaction ID
    flags:             u16;
    num_questions:     u16;
    num_answers:       u16;
    num_authority_prs: u16;
    num_other_prs:     u16;
}

// DNS resource record
mg_dns_rr :: struct {
    nlen:   u16; // Name or pointer length
    atype:  u16; // Address type
    aclass: u16; // Address class
    alen:   u16; // Address length
}

mg_resolve :: (unknown0: *mg_connection, url: *u8) -> void #foreign mongoose;

mg_resolve_cancel :: (unknown0: *mg_connection) -> void #foreign mongoose;

mg_dns_parse :: (buf: *u8, len: size_t, unknown0: *mg_dns_message) -> bool #foreign mongoose;

mg_dns_parse_rr :: (buf: *u8, len: size_t, ofs: size_t, is_question: bool, unknown0: *mg_dns_rr) -> size_t #foreign mongoose;

dns_data :: struct {
    next:   *dns_data;
    c:      *mg_connection;
    expire: s64;
    txnid:  u16;
}

packed_file :: struct {
    data: *u8;
    size: size_t;
    pos:  size_t;
}

// Packed FS, see examples/complete
mg_fs_packed: mg_fs #elsewhere mongoose;

dirent :: struct {
    d_name: [260] u8;
}

win32_dir :: struct {
    handle: HANDLE;
    info:   WIN32_FIND_DATAW;
    result: dirent;
}

DIR :: win32_dir;

// POSIX open/close/read/write/seek
mg_fs_posix: mg_fs #elsewhere mongoose;

printdirentrydata :: struct {
    c:    *mg_connection;
    hm:   *mg_http_message;
    opts: *mg_http_serve_opts;
    dir:  *u8;
}

MQTT :: enum s32 {
    OK         :: 0;
    INCOMPLETE :: 1;
    MALFORMED  :: 2;
    MQTT_OK         :: OK;
    MQTT_INCOMPLETE :: INCOMPLETE;
    MQTT_MALFORMED  :: MALFORMED;
}

char64long16 :: union {
    c: [64] u8;
    l: [16] u32;
}

usa :: union {
    sa:  sockaddr;
    sin: sockaddr_in;
}

// Global list of timers
g_timers: *mg_timer #elsewhere mongoose;

url :: struct {
    key:  size_t;
    user: size_t;
    pass: size_t;
    host: size_t;
    port: size_t;
    uri:  size_t;
    end:  size_t;
}

ws_msg :: struct {
    flags:      u8;
    header_len: size_t;
    data_len:   size_t;
}

#scope_file

mongoose :: #library "bin/win/mongoose";
